@startuml
hide circle
skinparam classAttributeIconSize 0
class FinanceManager {
    -  totalCash:long
    --
    + FinanceManager(Ui ui)
    + setTotalCash(totalCash:int)
    + getTotalCash() : long
    + rentalPayment(instrument:Instrument , to:LocalDate)
    + overduePayment(instrument:Instrument, now:LocalDate)
    + inflowPayment(amount:int)
    + outflowPayment(amount:int)
    + toFileEntry() : String
}

class Ui
class InstrumentList

FinanceManager <--> Ui
FinanceManager --> InstrumentList

@enduml
